// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render 1`] = `
<DocumentFragment>
  <div
    class="tabs"
  >
    <div
      class="tabs__header"
      role="tablist"
    >
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item tabs__header__item--active"
        data-target="0"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        <div>
          Title 1
        </div>
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item"
        data-target="1"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 2
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item"
        data-target="2"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 3
      </div>
    </div>
    <div
      data-testid="tab-content"
      id="1"
      role="tabpanel"
    >
      blah
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs should render other default tab 1`] = `
<DocumentFragment>
  <div
    class="tabs"
  >
    <div
      class="tabs__header"
      role="tablist"
    >
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item"
        data-target="0"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        <div>
          Title 1
        </div>
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item"
        data-target="1"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 2
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item tabs__header__item--active"
        data-target="2"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 3
      </div>
    </div>
    <div
      data-testid="tab-content"
      id="1"
      role="tabpanel"
    >
      blahest
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs should render tabs and pass extra props 1`] = `
<DocumentFragment>
  <div
    class="tabs"
    data-value="value"
  >
    <div
      class="tabs__header"
      role="tablist"
    >
      <div
        aria-controls="1"
        aria-disabled="false"
        aria-label="blah!"
        class="tabs__header__item tabs__header__item--active"
        data-target="0"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        <div>
          Title 1
        </div>
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item"
        data-target="1"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 2
      </div>
      <div
        aria-controls="1"
        aria-disabled="false"
        class="tabs__header__item merged-class"
        data-key="3"
        data-target="2"
        data-testid="tab-title"
        role="tab"
        tabindex="1"
      >
        Title 3
      </div>
    </div>
    <div
      data-testid="tab-content"
      id="1"
      role="tabpanel"
    >
      blah
    </div>
  </div>
</DocumentFragment>
`;
